# prawn

./: .gitignore  CHESS_ENGINE_DEVELOPMENT_GUIDE.md  Cargo.toml  INTEGRATION_GUIDE.md  Prawn_win.pgn  TEST_PLAN.md  build.rs
.cargo/: config.toml
missions/mission1/: README.md
missions/mission2/: BENCHMARK_RESULTS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  divide_output.txt
missions/mission2/examples/: perft_benchmark.rs
missions/mission2/src/: board_ext.rs  lib.rs  movegen.rs  moves.rs
missions/mission2/tests/: debug_attack_detection.rs  debug_checkmate.rs  debug_e4_kiwipete.rs  debug_en_passant.rs  debug_is_legal.rs  (+8 more)
missions/mission3/: Cargo.toml  README.md
missions/mission4/: Cargo.toml  README.md
missions/mission5/: Cargo.toml  README.md
missions/mission6/: Cargo.toml  README.md
missions/mission7/: README.md
missions/mission8/: README.md
scripts/: integrate-mission.ps1  quick-commit.ps1
src/: attacks.rs  board.rs  board_ext.rs  center_control.rs  eval.rs  game_state.rs  king_safety.rs  lib.rs  magic.rs  main.rs  material.rs  mobility.rs  move_ordering.rs  movegen.rs  moves.rs  pawn_structure.rs  pst.rs  search.rs  transposition.rs  uci.rs
tests/: board_tests.rs  debug_attack_detection.rs  debug_checkmate.rs  debug_e4_kiwipete.rs  debug_en_passant.rs  debug_is_legal.rs  debug_knight.rs  debug_test.rs  debug_test2.rs  divide_test.rs  eval_tests.rs  find_checkmate.rs  move_execution_tests.rs  move_generation_tests.rs  perft_tests.rs  reference_data.rs  uci_tests.rs  verify_squares.rs
tournaments/: 2025-12-31_vs_TSCP181.pgn
(+21 files in other folders)
